tests/backend/checkmach/fail3.output
File "fail3.ml", line 1:
Error: Annotation check for noalloc failed on function camlFail3__test_HIDE_NAME
